[project]
dependencies = [
    "python-dateutil >= 2.8.2, <3",
    "fonttools >= 4.42.1, <5",
    "matplotlib >= 3.8.0, <4",
    "nodeps",
    "pillow >= 10.0.0, <11",
    "pikepdf >= 8.7.1, <9",
    "PyMuPDF >= 1.23.3, <2",
    "pymupdf-fonts >= 1.0.5, <2",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
name = "kitpdf"
description = "PDF helpers and utils"

[project.optional-dependencies]
dev = [
    "nodeps[all,dev]",
]

[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/j5pu/pdfbox"

[project.license]
text = "MIT"
[build-system]
requires = [
    "nodeps",
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
