[global]
quiet = 1
verbose = 0
show_warnings = false

[egg_info]
egg_base = /tmp

[options]
include_package_data = True
packages = find:
package_dir = 
	= src
cmdclass = 
	build_py = nodeps.BuildPy
	develop = nodeps.Develop
	easy_install = nodeps.EasyInstall
	install_lib = nodeps.InstallLib

[options.package_data]
pdfbox.data = 
	*
kitpdf = 
	*.pth
kitpdf.data = 
	*

[options.packages.find]
where = src
exclude = 
	*data*

